--- a/clients/package.json
+++ b/clients/package.json
@@ -13,13 +13,21 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
-    "react-router-dom": "^6.6.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.0",
+    "redux": "^4.2.0",
+    "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
